@@ -1,3 +1,11 @@
+Wed Jun 25 21:32:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py: Code tidyup.  Also, make queries keep track of
+	  the connection they were obtained from: complain if an attempt to
+	  combined queries from different connections is made.  This is
+	  preparation for allowing the search to be performed as a method
+	  of Query.
+
 Wed Jun 25 13:53:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/query.py: Allow division of queries by a number (equivalent
